--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,10 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 20
+
+      - name: Generate Changelog file
+        run: ./genchangelog.sh
+
       - name: Package and release
         uses: BigWigsMods/packager@v2
         with:
