Ci/changelog generator (#13)
* Create changelog script to generate it and add it to release workflows

* Create changelog script to generate it and add it to release workflows (#12)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 20
 
       - name: Generate Changelog file
-        run: ./genchangelog.sh
+        run: chmod +x genchangelog.sh && ./genchangelog.sh
 
       - name: Package and release
         uses: BigWigsMods/packager@v2
