--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ env:
 jobs:
   release:
     runs-on: ubuntu-latest
-    environment: Default
+    permissions:
+      contents: write
+    environment: release
     steps:
       - name: Clone project
         uses: actions/checkout@v1
